--- a/_includes/header.html
+++ b/_includes/header.html
@@ -6,13 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
     <title>{% if page.title %}{{ page.title }} &mdash; {% endif %}{{ site.title }}</title>
     <link rel="stylesheet" href="{{ site.url }}/assets/vendor/primer-css/css/primer.css">
+    <link rel="stylesheet" href="{{ site.url }}/assets/css/globals/prism.css">
     <link rel="stylesheet" href="{{ site.url }}/assets/vendor/primer-markdown/dist/user-content.min.css">
     <link rel="stylesheet" href="{{ site.url }}/assets/vendor/octicons/octicons/octicons.css">
     <link rel="stylesheet" href="{{ site.url }}/assets/css/components/collection.css">
-    <link rel="stylesheet" href="{{ site.url }}/assets/css/components/repo-card.css">
     <link rel="stylesheet" href="{{ site.url }}/assets/css/sections/repo-list.css">
-    <link rel="stylesheet" href="{{ site.url }}/assets/css/sections/mini-repo-list.css">
-    <link rel="stylesheet" href="{{ site.url }}/assets/css/components/boxed-group.css">
     <link rel="stylesheet" href="{{ site.url }}/assets/css/globals/common.css">
     <link rel="stylesheet" href="{{ site.url }}/assets/vendor/share.js/dist/css/share.min.css">
     <link rel="stylesheet" href="{{ site.url }}/assets/css/globals/responsive.css">
@@ -66,14 +64,20 @@
     {% if page.date %}
     <meta property="article:published_time" content="{{ page.date | date: '%Y-%m-%d' }}">
     {% endif %}
-    <script src="{{ site.url }}/assets/vendor/jquery/dist/jquery.min.js"></script>
-    <script src="{{ site.url }}/assets/js/jquery-ui.js"></script>
-    <script src="{{ site.url }}/assets/js/main.js"></script>
+
+    {% case site.comments_provider %}
+      {% when 'gitalk' %}
+        <link rel="stylesheet" href="https://unpkg.com/gitalk/dist/gitalk.css">
+    {% endcase %}
+    <script src="https://libs.baidu.com/jquery/2.1.4/jquery.min.js"></script>
 </head>
 <body class="{{ page.class }}" data-mz="{{ page.class }}">
     <header class="site-header">
         <div class="container">
-            <h1><a href="{{ site.url }}/" title="{{ site.title }}"><span class="octicon octicon-mark-github"></span> {{ site.title }}</a></h1>
+            <a href="{{ site.url }}/" title="{{ site.title }}" class="logo">
+              <span class="octicon"></span>
+              <span class="title">{{ site.title }}</span>
+            </a>
             <button class="collapsed mobile-visible" type="button" onclick="toggleMenu();">
               <span class="icon-bar"></span>
               <span class="icon-bar"></span>
