--- a/_layouts/content.html
+++ b/_layouts/content.html
@@ -18,7 +18,7 @@ layout: default
 <!-- / .banner -->
  <section class="container content">
         <div class="columns">
-            <div class="column two-thirds" >
+            <div class="column" >
                 <article class="article-content markdown-body">
                     {{ content }}
                 </article>
@@ -28,10 +28,6 @@ layout: default
                 <div class="comment">
                     {% include comments.html %}
                 </div>
-            </div>
-            <div class="column one-third">
-                {% include sidebar-search.html %}
-                {% include sidebar-popular-repo.html %}
             </div>
         </div>
     </section>
