--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -39,9 +39,8 @@ layout: default
       {% include comments.html %}
     </div>
   </div>
-  <div class="column one-fourth">
+  <div class="column one-fourth mobile-hidden">
     {% include sidebar-search.html %}
-    {% include sidebar-qrcode.html %}
     {% include sidebar-post-nav.html %}
   </div>
 </div>
