--- a/assets/css/pages/index.css
+++ b/assets/css/pages/index.css
@@ -1,9 +1,15 @@
 .home .banner,
 .home .site-header {
-    background: #4183c4;
     color: #fff
 }
-
+.site-header {
+  background: rgb(9, 31, 4) url('/assets/images/banner.jpg') no-repeat center top;
+  background-size: 100% 263px;
+}
+.banner {
+  background: rgb(9, 31, 4) url('/assets/images/banner.jpg') no-repeat center -68px;
+  background-size: 100% 263px;
+}
 .home .banner .collection-head {
     color: #fff;
     background: 0 0;
