--- a/assets/css/posts/index.css
+++ b/assets/css/posts/index.css
@@ -123,3 +123,20 @@
     background-color: #777;
     border-radius: 10px;
 }
+.page-error {
+    width: 100%;
+    min-height: 280px;
+    text-align: center;
+    line-height: 100px;
+    margin: 0 auto;
+}
+@media (min-width:750px) {
+    .page-error {
+        min-width: 1000px;
+    }
+  }
+.page-error .img-error {
+    display: inline-block;
+    width: 100%;
+    max-width: 720px;
+}
