--- a/assets/css/sections/repo-list.css
+++ b/assets/css/sections/repo-list.css
@@ -1,1 +1,90 @@
 .repo-list-name,.repo-list-name .prefix,.repo-list-name .slash{font-weight:400}.repo-list{position:relative;padding-left:0}.repo-list .participation-graph{position:absolute;right:0;bottom:0;left:0;z-index:-1}.repo-list .participation-graph.disabled{display:none}.repo-list .participation-graph .bars{position:absolute;bottom:0}.repo-list-item{position:relative;padding-top:30px;padding-bottom:30px;list-style:none;border-bottom:1px solid #eee}.repo-list-name{margin:0 0 8px;font-size:20px;line-height:1.2}.repo-list-name:hover{text-decoration:none;color:#4169E1}.repo-list-name .slash{margin-right:-4px;margin-left:-4px}.repo-list-description{max-width:550px;margin-top:8px;margin-bottom:0;font-size:14px;color:#666}.repo-list-stats{margin-top:6px;float:right;font-size:12px;font-weight:700;color:#888}.repo-list-stats .repo-list-stat-item{margin-left:8px;display:inline-block;color:#888;text-decoration:none}.repo-list-stats .repo-list-stat-item:hover{color:#4183c4}.repo-list-stats .repo-list-stat-item>.octicon{font-size:14px}.repo-list-info{display:inline-block;height:100%;margin-top:0;margin-bottom:0;font-size:12px;color:#888;vertical-align:middle}.repo-list-info .octicon{margin-top:-3px;font-size:12px;vertical-align:middle}.repo-list-meta{display:block;margin-top:8px;margin-bottom:0;font-size:13px;color:#999}.repo-list-meta .avatar{margin-top:-2px}.repo-list-meta a:hover{text-decoration:none}.repo-list-meta .meta-info{margin-right:15px}.repo-list-meta .meta-info a{color:#999}.repo-list-meta .meta-info a:hover,.repo-list-meta .meta-info a:hover{text-decoration: underline}
+
+
+.one-third-column {
+  width: 33.333333%;
+  float: left;
+  padding-left: 10px;
+  padding-right: 10px;
+}
+
+.card-image {
+    display: table;
+    height: 120px;
+    width: 100%;
+    border-radius: 4px;
+}
+
+.card-image .card-image-cell {
+    display: table-cell;
+    vertical-align: middle;
+}
+
+.card-image h3 {
+    margin: 0;
+    font-size: 1.5em;
+    color: white;
+}
+
+.card-image a {
+    color: #fff;
+}
+
+.card-description {
+    height: 3em;
+    overflow: hidden;
+}
+
+.card:hover,
+.card:active {
+  text-decoration: none;
+}
+
+.card .thumbnail {
+    border: 1px solid rgba(0,0,0,0.075);
+    border-bottom-color: rgba(0,0,0,0.125);
+    border-radius: 4px;
+    box-shadow: 0 1px 2px rgba(0,0,0,0.05),0 5px 10px rgba(0,0,0,0.05);
+    -webkit-transition: border-color 0.1s ease-in-out, box-shadow 0.1s ease-in-out;
+    transition: border-color 0.1s ease-in-out, box-shadow 0.1s ease-in-out;
+    opacity: 0.8;
+    overflow-x: hidden;
+}
+
+.card .thumbnail:hover{
+    border-color:rgba(0,0,0,0.1) rgba(0,0,0,0.1) rgba(0,0,0,0.15);
+    box-shadow:0 2px 4px rgba(0,0,0,0.05),0 10px 18px rgba(0,0,0,0.1);
+    opacity: 1;
+}
+
+.card .thumbnail:hover .card-title a{
+    color:#000;
+    text-decoration:none;
+}
+
+.thumbnail {
+  display: block;
+  padding: 4px;
+  margin-bottom: 20px;
+  line-height: 1.42857143;
+  background-color: #fff;
+  border: 1px solid #ddd;
+  border-radius: 4px;
+  -webkit-transition: border .2s ease-in-out;
+  -o-transition: border .2s ease-in-out;
+  transition: border .2s ease-in-out
+}
+
+.thumbnail .caption {
+  padding: 9px;
+  color: #333;
+}
+
+.card-text {
+  font-size: 0.75em;
+  display: inline;
+}
+
+.card-text .meta-info {
+    margin-right: 10px;
+}
