--- a/assets/css/pages/index.css
+++ b/assets/css/pages/index.css
@@ -3,11 +3,11 @@
     color: #fff
 }
 .site-header {
-  background: rgb(9, 31, 4) url('/assets/images/banner.jpg') no-repeat center top;
+  background: rgb(28, 150, 208);
   background-size: 100% 263px;
 }
 .banner {
-  background: rgb(9, 31, 4) url('/assets/images/banner.jpg') no-repeat center -68px;
+  background:rgb(28, 150, 208);
   background-size: 100% 263px;
 }
 .home .banner .collection-head {
